style:finished mobile desing

--- a/style.css
+++ b/style.css
@@ -95,6 +95,14 @@ border-radius: 0 0 3.2rem 3.2rem;
         gap: 1.2rem;
     }
 
+    .resumo > div strong{
+        color: var(--dark-navy);
+    }    
+
+    .resumo > div strong span{
+        opacity: 0.5;
+    }
+    
     .resumo_reacao{
         background: var(--reacao-bg) var(--resumo-div-bg);
         color: var(--reacao-bg);
@@ -113,6 +121,18 @@ border-radius: 0 0 3.2rem 3.2rem;
     .resumo_visual{
         background: var(--visual-bg) var(--resumo-div-bg);
         color: var(--visual-bg);
+    }
+
+    .resumo button{
+        margin: 0.8rem;
+        width: 100%;
+        border: none;
+        background: var(--dark-navy);
+        color: var(--white);
+        padding-block: 1.6rem;
+        border-radius: 12.8rem;
+        font-size: 1.8rem;
+        font-weight: 700;
     }
         
     
